--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Jon Barron</title>
+    <title>Rohit Choudhary Manth</title>
 
-    <meta name="author" content="Jon Barron">
+    <meta name="author" content="Rohit Choudhary">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
