--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="http://jonbarron.info/zipnerf">
-            <span class="papertitle">Zip-NeRF: Anti-Aliased Grid-Based Neural Radiance Fields</span>
+            <span class="papertitle">MEStereo-Du2CNN: a dual-channel CNN for learning robust depth
+estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
           <strong>Jonathan T. Barron</strong>,
