--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
 estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
-          <strong>Jonathan T. Barron</strong>,
-          <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-          <a href="https://scholar.harvard.edu/dorverbin/home">Dor Verbin</a>,
-          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-          <a href="https://phogzone.com/">Peter Hedman</a>
+          <strong>Rohit Choudhary</strong>,
+          <a href="https://bmild.github.io/">Mansi Sharma</a>,
+          <a href="https://scholar.harvard.edu/dorverbin/home">T.V. Uma</a>,
+          <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>,
           <br>
-          <em>ICCV</em>, 2023 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+          <em>The Visual Computer Journal</em>, 2023
           <br>
           <a href="http://jonbarron.info/zipnerf">project page</a>
           /
