--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <br>
           <em>The Visual Computer Journal</em>, 2023
           <br>
-          <a href="http://jonbarron.info/zipnerf">project page</a>
+          <a href="https://link.springer.com/article/10.1007/s00371-023-02912-z">Paper link</a>
           /
-          <a href="https://www.youtube.com/watch?v=xrrhynRzC8k">video</a>
+          <a href="https://github.com/RohitChoudharyManth/MEStrereo-Du2CNN">Github page</a>
           /
-          <a href="https://arxiv.org/abs/2304.06706">arXiv</a>
+          <a href="inyurl.com/2p95b2dz">Supplementary file</a>
           <p></p>
           <p>
           Combining mip-NeRF 360 and grid-based models like Instant NGP lets us reduce error rates by 8%&ndash;77% and accelerate training by 24x.
