--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           /
           <a href="https://github.com/RohitChoudharyManth/MEStrereo-Du2CNN">Github page</a>
           /
-          <a href="inyurl.com/2p95b2dz">Supplementary file</a>
+          <a href="https://drive.google.com/file/d/1684NzIrXFLzSAutpW0wVr_hjEQ4kzwTl/view">Supplementary file</a>
           <p></p>
           <p>
           Combining mip-NeRF 360 and grid-based models like Instant NGP lets us reduce error rates by 8%&ndash;77% and accelerate training by 24x.
