--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
           
-  <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">T Harshith Reddy</a>, <a href="https://poolio.github.io/">Mansi Sharma</a>\ 
+  <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">T Harshith Reddy</a>, <a href="https://poolio.github.io/">Mansi Sharma</a> 
           <br>
           <em>ICCV</em>, 2023
           <br>
@@ -161,17 +161,12 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://bakedsdf.github.io/">
-            <span class="papertitle">BakedSDF: Meshing Neural SDFs for Real-Time View Synthesis</span>
+            <span class="papertitle">SDE-DualENet: A Novel Dual Efficient Convolutional Neural Network for Robust Stereo Depth Estimation</span>
           </a>
           <br>
-          <a href="https://lioryariv.github.io/">Lior Yariv*</a>,
-          <a href="https://phogzone.com/">Peter Hedman*</a>,
-          <a href="https://creiser.github.io/">Christian Reiser</a>,
-          <a href="https://dorverbin.github.io/">Dor Verbin</a>,  <br>
-          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-          <a href="https://szeliski.org/RichardSzeliski.htm">Richard Szeliski</a>,
-          <strong>Jonathan T. Barron</strong>,
-          <a href="https://bmild.github.io/">Ben Mildenhall</a>
+          <a href="https://lioryariv.github.io/">Rithvik Anil</a>,
+          <a href="https://phogzone.com/">Mansi Sharma</a>,
+          <strong>Rohit Choudhary</strong>
           <br>
           <em>SIGGRAPH</em>, 2023
           <br>
