--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           
   <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">T Harshith Reddy</a>, <a href="https://poolio.github.io/">Mansi Sharma</a> 
           <br>
-          <em>ICCV</em>, 2023
+          <em>ICIP</em>, 2023
           <br>
           <a href="https://dreambooth3d.github.io/">project page</a> / 
           <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
@@ -168,7 +168,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <a href="https://phogzone.com/">Mansi Sharma</a>,
           <strong>Rohit Choudhary</strong>
           <br>
-          <em>SIGGRAPH</em>, 2023
+          <em>VCIP</em>, 2023
           <br>
           <a href="https://bakedsdf.github.io/">project page</a>
           /
