--- a/index.html
+++ b/index.html
@@ -206,19 +206,14 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
                 <a href="https://waymo.com/research/block-nerf/">
-                  <span class="papertitle">Block-NeRF: Scalable Large Scene Neural View Synthesis</span>
+                  <span class="papertitle">A High Resolution Multi-exposure Stereoscopic Image & Video Database of Natural Scenes</span>
                 </a>
                 <br>
-                <a href="http://matthewtancik.com/">Matthew Tancik</a>,
-                <a href="http://casser.io/">Vincent Casser</a>,
-                <a href="https://sites.google.com/site/skywalkeryxc/">Xinchen Yan</a>,
-                <a href="https://scholar.google.com/citations?user=5mJUkI4AAAAJ&hl=en">Sabeek Pradhan</a>, <br>
-                <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-                <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-                <strong>Jonathan T. Barron</strong>,
-                <a href="https://www.henrikkretzschmar.com/">Henrik Kretzschmar</a>
+                <strong>Rohit Choudhary</strong>,
+                <a href="http://casser.io/">Mansi Sharma</a>,
+                <a href="https://sites.google.com/site/skywalkeryxc/">Aditya Wadaskar</a>
                 <br>
-          <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+          <em>arxiv</em>, 2022 &nbsp
                 <br>
                 <a href="https://waymo.com/research/block-nerf/">project page</a>
           /
