--- a/index.html
+++ b/index.html
@@ -215,11 +215,10 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
                 <br>
           <em>arxiv</em>, 2022 &nbsp
                 <br>
-                <a href="https://waymo.com/research/block-nerf/">project page</a>
+                <a href="https://sites.google.com/view/
+multi-exposure-stereo-data/.">webpge</a>
           /
-                <a href="https://arxiv.org/abs/2202.05263">arXiv</a>
-          /
-                <a href="https://www.youtube.com/watch?v=6lGMCAzBzOQ">video</a>
+                <a href="https://arxiv.org/abs/2206.11095">arXiv</a>
                 <p></p>
                 <p>We can do city-scale reconstruction by training multiple NeRFs with millions of images.</p>
               </td>
