--- a/index.html
+++ b/index.html
@@ -246,14 +246,12 @@ multi-exposure-stereo-data/.">webpge</a>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
                 <a href="https://grail.cs.washington.edu/projects/humannerf/">
-                  <span class="papertitle">HumanNeRF: Free-viewpoint Rendering of Moving People from Monocular Video</span>
+                  <span class="papertitle">2T-UNET: A Two-Tower UNet with Depth Clues for Robust Stereo Depth Estimation</span>
                 </a>
                 <br>
-                <a href="https://homes.cs.washington.edu/~chungyi/">Chung-Yi Weng</a>,
-                <a href="https://homes.cs.washington.edu/~curless/">Brian Curless</a>,
-                <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>, <br>
-                <strong>Jonathan T. Barron</strong>,
-                <a href="https://www.irakemelmacher.com/">Ira Kemelmacher-Shlizerman </a>
+                <strong>Rohit Choudhary</strong>,
+                <a href="https://homes.cs.washington.edu/~curless/">Mansi Sharma</a>,
+                <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>, <br>
                 <br>
                 <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
                 <br>
