--- a/index.html
+++ b/index.html
@@ -253,13 +253,9 @@ multi-exposure-stereo-data/.">webpge</a>
                 <a href="https://homes.cs.washington.edu/~curless/">Mansi Sharma</a>,
                 <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>, <br>
                 <br>
-                <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+                <em>arxiv</em>, 2022 &nbsp
                 <br>
-                <a href="https://grail.cs.washington.edu/projects/humannerf/">project page</a>
-                /
-                <a href="https://arxiv.org/abs/2201.04127">arXiv</a>
-                /
-                <a href="https://youtu.be/GM-RoZEymmw">video</a>
+                <a href="https://arxiv.org/abs/2210.15374">arxiv</a>
                 <p></p>
                 <p>Combining NeRF with pose estimation lets you use a monocular video to do free-viewpoint rendering of a human.</p>
               </td>
