--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
           <strong>Rohit Choudhary</strong>,
-          <a href="https://bmild.github.io/">Mansi Sharma</a>,
-          <a href="https://scholar.harvard.edu/dorverbin/home">T.V. Uma</a>,
+          <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
+          <a href="https://www.linkedin.com/in/uma-t-v-5a7533149/?originalSubdomain=in">T.V. Uma</a>,
           <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>,
           <br>
           <em>The Visual Computer Journal</em>, 2023
@@ -126,7 +126,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
           
-  <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">T Harshith Reddy</a>, <a href="https://poolio.github.io/">Mansi Sharma</a> 
+  <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">T Harshith Reddy</a>, <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a> 
           <br>
           <em>ICIP</em>, 2023
           <br>
@@ -165,7 +165,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
           <a href="https://lioryariv.github.io/">Rithvik Anil</a>,
-          <a href="https://phogzone.com/">Mansi Sharma</a>,
+          <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
           <strong>Rohit Choudhary</strong>
           <br>
           <em>VCIP</em>, 2023
@@ -210,7 +210,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
                 </a>
                 <br>
                 <strong>Rohit Choudhary</strong>,
-                <a href="http://casser.io/">Mansi Sharma</a>,
+                <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
                 <a href="https://sites.google.com/site/skywalkeryxc/">Aditya Wadaskar</a>
                 <br>
           <em>arxiv</em>, 2022 &nbsp
@@ -250,7 +250,7 @@ multi-exposure-stereo-data/.">webpge</a>
                 </a>
                 <br>
                 <strong>Rohit Choudhary</strong>,
-                <a href="https://homes.cs.washington.edu/~curless/">Mansi Sharma</a>,
+                <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
                 <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>, <br>
                 <br>
                 <em>arxiv</em>, 2022 &nbsp
