--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="http://jonbarron.info/zipnerf">
+          <a href="https://link.springer.com/article/10.1007/s00371-023-02912-z">
             <span class="papertitle">MEStereo-Du2CNN: a dual-channel CNN for learning robust depth
 estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
