--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <strong>Rohit Choudhary</strong>,
           <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
           <a href="https://www.linkedin.com/in/uma-t-v-5a7533149/?originalSubdomain=in">T.V. Uma</a>,
-          <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>,
+          <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>,
           <br>
           <em>The Visual Computer Journal</em>, 2023
           <br>
@@ -126,7 +126,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </a>
           <br>
           
-  <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/srinivas-kaza-64223b74">T Harshith Reddy</a>, <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a> 
+  <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/harshith-reddy-thammineni-10515616b?originalSubdomain=in">T Harshith Reddy</a>, <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a> 
           <br>
           <em>ICIP</em>, 2023
           <br>
@@ -164,7 +164,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
             <span class="papertitle">SDE-DualENet: A Novel Dual Efficient Convolutional Neural Network for Robust Stereo Depth Estimation</span>
           </a>
           <br>
-          <a href="https://lioryariv.github.io/">Rithvik Anil</a>,
+          <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>,
           <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
           <strong>Rohit Choudhary</strong>
           <br>
@@ -211,7 +211,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
                 <br>
                 <strong>Rohit Choudhary</strong>,
                 <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
-                <a href="https://sites.google.com/site/skywalkeryxc/">Aditya Wadaskar</a>
+                <a href="https://www.linkedin.com/in/aditya-wadaskar-876a1812a/?originalSubdomain=in">Aditya Wadaskar</a>
                 <br>
           <em>arxiv</em>, 2022 &nbsp
                 <br>
@@ -251,7 +251,7 @@ multi-exposure-stereo-data/.">webpge</a>
                 <br>
                 <strong>Rohit Choudhary</strong>,
                 <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
-                <a href="https://pratulsrinivasan.github.io/">Rithvik Anil</a>, <br>
+                <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, <br>
                 <br>
                 <em>arxiv</em>, 2022 &nbsp
                 <br>
