--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
                 <h4><font color="red"<strong>News</strong></font></h4>
                 <p>
                    <ul>
+                    <li>(October 9, 2023) I will be presenting ELEGAN <font color ="red">(Poster)</font> at <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">ICIP 2023</a>.</li>
                     <li>(June 22, 2023) Paper on unsupervised low light image enhancement accepted in IEEE ICIP 2023.</li>
                     <li>(April 27, 2023) MEStereo-Du2CNN paper accepted for publication in The Visual Computer Journal.</li>
-                    <li>Tea</li>
-                    <li>Milk</li>
+                    <li>(September, 2021) Paper on stereo depth estimation accepted in IEEE VCIP 2021.</li>
+
                   </ul> 
                 </p>
               </td>
