--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
                 <p>I am a research scholar at department of <a href="https://www.ee.iitm.ac.in/">Electrical Engineering</a>, <a href="https://www.iitm.ac.in/">IIT Madras</a>, where I am working under the guidance of <a href="https://www.ee.iitm.ac.in/kmitra/">Dr. Kaushik Mitra</a> and <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Dr. Mansi Sharma</a>. I am working on developing deep learning methods for low-light image enhancement and scene depth estimation. Prior to joining the M.S program at IIT Madras, I completed my undergraduate studies in Electronics and Communication Engineering from the National Institute of Technology Kurukshetra, India.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:rohitc.manth@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=IQZ4jIQAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://">LinkedIn</a> &nbsp;/&nbsp;
+                  <a href="https://github.com/RohitChoudharyManth">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -279,23 +278,6 @@ multi-exposure-stereo-data/.">webpge</a>
                 <a href="https://arxiv.org/abs/2210.15374">arxiv</a>
                 <p></p>
                 <p>Combining NeRF with pose estimation lets you use a monocular video to do free-viewpoint rendering of a human.</p>
-              </td>
-            </tr>
-
-            <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/clean_promo.jpg" alt="clean-usnob" width="160" height="160">
-              </td>
-              <td width="75%" valign="middle">
-                <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
-                  <span class="papertitle">Cleaning the USNO-B Catalog Through Automatic Detection of Optical Artifacts</span>
-                </a>
-                <br>
-                <strong>Jonathan T. Barron</strong>, <a href="http://stumm.ca/">Christopher Stumm</a>, <a href="http://cosmo.nyu.edu/hogg/">David W. Hogg</a>, <a href="http://www.astro.princeton.edu/~dstn/">Dustin Lang</a>, <a href="http://cs.nyu.edu/~roweis/">Sam Roweis</a>
-                <br>
-                <em>The Astronomical Journal</em>, 135, 2008
-                <p>We use computer vision techniques to identify and remove diffraction spikes and reflection halos in the USNO-B Catalog.</p>
-                <p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>
               </td>
             </tr>
 
