--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>I am a research scholar at department of <a href="https://www.ee.iitm.ac.in/">Electrical Engineering</a>, <a href="https://www.iitm.ac.in/">IIT Madras</a>, where I am working under the guidance of <a href="https://www.ee.iitm.ac.in/kmitra/">Dr. Kaushik Mitra</a> and <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Dr. Mansi Sharma</a>. I am working on developing deep learning methods for low-light image enhancement and scene depth estimation. Prior to joining the M.S program at IIT Madras, I completed my undergraduate studies in Electronics and Communication Engineering from the National Institute of Technology Kurukshetra, India.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:rohitc.manth@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:rohitchoudharymanth@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=IQZ4jIQAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://">LinkedIn</a> &nbsp;/&nbsp;
@@ -111,6 +111,8 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           /
           <a href="https://github.com/RohitChoudharyManth/MEStrereo-Du2CNN">Github page</a>
           /
+          <a href="https://arxiv.org/abs/2206.10375">arXiv</a>
+          /
           <a href="https://drive.google.com/file/d/1684NzIrXFLzSAutpW0wVr_hjEQ4kzwTl/view">Supplementary file</a>
           <p></p>
           <p>
@@ -148,7 +150,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           
   <strong>Rohit Choudhary</strong>, <a href="https://www.linkedin.com/in/harshith-reddy-thammineni-10515616b?originalSubdomain=in">T Harshith Reddy</a>, <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a> 
           <br>
-          <em>ICIP</em>, 2023
+          <em>IEEE International Conference on Image Processing (ICIP)</em>, 2023
           <br>
           <a href="https://dreambooth3d.github.io/">project page</a> / 
           <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
@@ -188,7 +190,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
           <strong>Rohit Choudhary</strong>
           <br>
-          <em>VCIP</em>, 2023
+          <em>IEEE Visual Communications and Image Processing (VCIP)</em>, 2023
           <br>
           <a href="https://bakedsdf.github.io/">project page</a>
           /
