--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
-
-
-
-
-
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
@@ -192,11 +187,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <br>
           <em>IEEE Visual Communications and Image Processing (VCIP)</em>, 2023
           <br>
-          <a href="https://bakedsdf.github.io/">project page</a>
-          /
-          <a href="https://www.youtube.com/watch?v=fThKXZ6uDTk">video</a>
-          /
-          <a href="https://arxiv.org/abs/2302.14859">arXiv</a>
+          <a href="https://ieeexplore.ieee.org/document/9675391/">Paper link</a>
           <p></p>
           <p>
           We use SDFs to bake a NeRF-like model into a high quality mesh and do real-time view synthesis.
@@ -235,7 +226,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
                 <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
                 <a href="https://www.linkedin.com/in/aditya-wadaskar-876a1812a/?originalSubdomain=in">Aditya Wadaskar</a>
                 <br>
-          <em>arxiv</em>, 2022 &nbsp
+          <em>arXiv</em>, 2022 &nbsp
                 <br>
                 <a href="https://sites.google.com/view/
 multi-exposure-stereo-data/.">webpge</a>
@@ -275,9 +266,9 @@ multi-exposure-stereo-data/.">webpge</a>
                 <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
                 <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, <br>
                 <br>
-                <em>arxiv</em>, 2022 &nbsp
+                <em>arXiv</em>, 2022 &nbsp
                 <br>
-                <a href="https://arxiv.org/abs/2210.15374">arxiv</a>
+                <a href="https://arxiv.org/abs/2210.15374">arXiv</a>
                 <p></p>
                 <p>Combining NeRF with pose estimation lets you use a monocular video to do free-viewpoint rendering of a human.</p>
               </td>
@@ -345,7 +336,7 @@ multi-exposure-stereo-data/.">webpge</a>
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
+                  Website credits to <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>.
                 </p>
               </td>
             </tr>
