--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Rohit Choudhary
                 </p>
-                <p>I am a research scholar at department of <a href="https://www.ee.iitm.ac.in/">Electrical Engineering</a>, <a href="https://www.iitm.ac.in/">IIT Madras</a>, where I am working under the guidance of <a href="https://www.ee.iitm.ac.in/kmitra/">Dr. Kaushik Mitra</a> and <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Dr. Mansi Sharma</a>. I am working on developing deep learning methods for low-light image enhancement and scene depth estimation. Prior to joining the M.S program at IIT Madras, I completed my undergraduate studies in Electronics and Communication Engineering from the National Institute of Technology Kurukshetra, India.
+                <p>I am a M.S. research scholar at department of <a href="https://www.ee.iitm.ac.in/">Electrical Engineering</a>, <a href="https://www.iitm.ac.in/">IIT Madras</a>, where I am working under the guidance of <a href="https://www.ee.iitm.ac.in/kmitra/">Dr. Kaushik Mitra</a> and <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Dr. Mansi Sharma</a>. I am working on developing deep learning methods for low-light image enhancement and scene depth estimation. Prior to joining the M.S program at IIT Madras, I completed my undergraduate studies in Electronics and Communication Engineering from the National Institute of Technology Kurukshetra, India.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:rohitchoudharymanth@gmail.com">Email</a> &nbsp;/&nbsp;
