--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/Rohit Choudhary.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Rohit Choudhary.jpg" class="hoverZoomLink"></a>
+                <a href="images/Rohit Choudhary.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/Rohit Choudhary.png" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
