--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
     
+
+
       <tr onmouseout="zipnerf_stop()" onmouseover="zipnerf_start()"  bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
@@ -76,7 +78,7 @@
             <source src="images/zipnerf.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='images/zipnerf.jpg' width="160">
+            <img src='images/Art_view1.png' width="160">
           </div>
           <script type="text/javascript">
             function zipnerf_start() {
@@ -111,7 +113,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <a href="https://drive.google.com/file/d/1684NzIrXFLzSAutpW0wVr_hjEQ4kzwTl/view">Supplementary file</a>
           <p></p>
           <p>
-          Combining mip-NeRF 360 and grid-based models like Instant NGP lets us reduce error rates by 8%&ndash;77% and accelerate training by 24x.
+           Exploring the utilization of a High Dynamic Range (HDR) reconstruction process to forecast depth, thereby opening up the potential of achieving 3D HDR through a unified pipeline.
           </p>
         </td>
       </tr>
