--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
       <tr onmouseout="zipnerf_stop()" onmouseover="zipnerf_start()"  bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
-            <div class="two" id='zipnerf_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="images/zipnerf.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+            <div class="two" id='zipnerf_image'><img src='images/Baby1_view1.png' width="160">
             </video></div>
             <img src='images/Art_view1.png' width="160">
           </div>
