--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <tr onmouseout="zipnerf_stop()" onmouseover="zipnerf_start()"  bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
-            <div class="two" id='zipnerf_image'><img src='images/Baby1_view1.png' width="160">
+            <div class="two" id='zipnerf_image'><img src='images/MEStereo2.png' width="160">
             </video></div>
-            <img src='images/Art_view1.png' width="160">
+            <img src='images/MEStereo1.png' width="160">
           </div>
           <script type="text/javascript">
             function zipnerf_start() {
