--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://dreambooth3d.github.io/">
+          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing">
             <span class="papertitle">ELEGAN: An efficient low light enhancement for unpaired supervision</span>
           </a>
           <br>
