--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <em>IEEE International Conference on Image Processing (ICIP)</em>, 2023
           <br>
           <a href="https://dreambooth3d.github.io/">project page</a> / 
-          <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
+          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing">Preprint</a>
           <p></p>
           <p>Combining DreamBooth (personalized text-to-image) and DreamFusion (text-to-3D) yields high-quality, subject-specific 3D assets with text-driven modifications</p>
         </td>
