--- a/index.html
+++ b/index.html
@@ -120,11 +120,8 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
       <tr onmouseout="db3d_stop()" onmouseover="db3d_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
-            <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="images/owl.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-            </video></div>
-            <img src='images/owl.png' width="160">
+            <div class="two" id='db3d_image'><img src='images/106_ours.png' width="160"></div>
+            <img src='images/106_fake.png' width="160">
           </div>
           <script type="text/javascript">
             function db3d_start() {
@@ -138,7 +135,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing">
+          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing??">
             <span class="papertitle">ELEGAN: An efficient low light enhancement for unpaired supervision</span>
           </a>
           <br>
@@ -148,7 +145,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <em>IEEE International Conference on Image Processing (ICIP)</em>, 2023
           <br>
           <a href="https://dreambooth3d.github.io/">project page</a> / 
-          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing">Preprint</a>
+          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing??">Preprint</a>
           <p></p>
           <p>Combining DreamBooth (personalized text-to-image) and DreamFusion (text-to-3D) yields high-quality, subject-specific 3D assets with text-driven modifications</p>
         </td>
