--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
       <tr onmouseout="db3d_stop()" onmouseover="db3d_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
-            <div class="two" id='db3d_image'><img src='images/106_ours.png' width="160"></div>
-            <img src='images/106_fake.png' width="160">
+            <div class="two" id='db3d_image'><img src='images/106_ours.jpg' width="160"></div>
+            <img src='images/106_fake.jpg' width="160">
           </div>
           <script type="text/javascript">
             function db3d_start() {
