--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:rohitchoudharymanth@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=IQZ4jIQAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://">LinkedIn</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/rohit-c-02051b148/">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://github.com/RohitChoudharyManth">Github</a>
                 </p>
               </td>
@@ -144,7 +144,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <br>
           <em>IEEE International Conference on Image Processing (ICIP)</em>, 2023
           <br>
-          <a href="https://dreambooth3d.github.io/">project page</a> / 
+          <a href="https://dreambooth3d.github.io/">Project page</a> / 
           <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing??">Preprint</a>
           <p></p>
           <p>Combining DreamBooth (personalized text-to-image) and DreamFusion (text-to-3D) yields high-quality, subject-specific 3D assets with text-driven modifications</p>
