--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
       <tr onmouseout="db3d_stop()" onmouseover="db3d_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
-            <div class="two" id='db3d_image'><img src='images/106_ours.jpg' width="160"></div>
-            <img src='images/106_fake.jpg' width="160">
+            <div class="two" id='db3d_image'><img src='images/Elegan_bright.jpg' width="160"></div>
+            <img src='images/Elegan_dark.jpg' width="160">
           </div>
           <script type="text/javascript">
             function db3d_start() {
@@ -134,9 +134,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
             db3d_stop()
           </script>
         </td>
-        <br>
-        <br>
-        <br>
+
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://drive.google.com/file/d69/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing">
             <span class="papertitle">ELEGAN: An efficient low light enhancement for unpaired supervision</span>
