--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h4><font color="red"<strong>News</strong></font></h4>
                 <p>
                    <ul>
-                    <li>(October 9, 2023) I will be presenting ELEGAN <font color ="red">(Poster)</font> at <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">ICIP 2023</a>.</li>
+                    <li>(October 9, 2023) I will be presenting ELEGAN <font color ="red">(Poster Presentation)</font> at <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">ICIP 2023</a>.</li>
                     <li>(June 22, 2023) Paper on unsupervised low light image enhancement accepted in IEEE ICIP 2023.</li>
                     <li>(April 27, 2023) MEStereo-Du2CNN paper accepted for publication in The Visual Computer Journal.</li>
                     <li>(September, 2021) Paper on stereo depth estimation accepted in IEEE VCIP 2021.</li>
@@ -239,11 +239,9 @@ multi-exposure-stereo-data/.">webpge</a>
             <tr onmouseout="hnerf_stop()" onmouseover="hnerf_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                  <div class="two" id='hnerf_image'><video  width=100% height=100% muted autoplay loop>
-                  <source src="images/hnerf_after.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
+                  <div class="two" id='zipnerf_image'><img src='images/2tunet.gif' width="160">
                   </video></div>
-                  <img src='images/hnerf_before.jpg' width="160">
+                  <img src='images/MEStereo1.png' width="160">
                 </div>
                 <script type="text/javascript">
                   function hnerf_start() {
