--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ multi-exposure-stereo-data/.">webpge</a>
                 <div class="one">
                   <div class="two" id='zipnerf_image'><img src='images/2tunet.gif' width="160">
                   </video></div>
-                  <img src='images/2tunet.png' width="160">
+                  <img src='images/2tunet.mp4' width="160">
                 </div>
                 <script type="text/javascript">
                   function hnerf_start() {
