--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ multi-exposure-stereo-data/.">webpge</a>
                 <br>
                 <em>arXiv</em>, 2022 &nbsp
                 <br>
-                <a href="https://arxiv.org/abs/2210.15374">arXiv</a>
+                <a href="https://arxiv.org/abs/2210.15374">ArXiv</a>
                 <p></p>
                 <p>Combining NeRF with pose estimation lets you use a monocular video to do free-viewpoint rendering of a human.</p>
               </td>
