--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
                   <div class="two" id='blocknerf_image'><video  width=100% height=100% muted autoplay loop>
-                  <source src="images/blocknerf_after.mp4" type="video/mp4">
+                  <source src="images/NAC.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video></div>
-                  <img src='images/blocknerf_before.jpg' width="160">
+                  <img src='images/NAC.png' width="160">
                 </div>
                 <script type="text/javascript">
                   function blocknerf_start() {
@@ -228,9 +228,9 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <em>arXiv</em>, 2022 &nbsp
                 <br>
                 <a href="https://sites.google.com/view/
-multi-exposure-stereo-data/.">webpge</a>
+multi-exposure-stereo-data/.">Webpge</a>
           /
-                <a href="https://arxiv.org/abs/2206.11095">arXiv</a>
+                <a href="https://arxiv.org/abs/2206.11095">ArXiv</a>
                 <p></p>
                 <p>We can do city-scale reconstruction by training multiple NeRFs with millions of images.</p>
               </td>
