--- a/index.html
+++ b/index.html
@@ -239,11 +239,12 @@ multi-exposure-stereo-data/.">Webpge</a>
             <tr onmouseout="hnerf_stop()" onmouseover="hnerf_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                  <div class="two" id='bakedsdf_image'><video  width=100% height=100% muted autoplay loop>
-                    <source src="images/2tunet.mp4" type="video/mp4">Your browser does not support the video tag.
-                    </video></div>
-                    <img src='images/2tunet.png' width="160">
-                  </div>
+                  <div class="two" id='blocknerf_image'><video  width=100% height=100% muted autoplay loop>
+                  <source src="images/2tunet.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video></div>
+                  <img src='images/2tunet.png' width="160">
+                </div>
                   <script type="text/javascript">
                   function hnerf_start() {
                     document.getElementById('hnerf_image').style.opacity = "1";
