--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ multi-exposure-stereo-data/.">Webpge</a>
                   <source src="images/2tunet.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video></div>
-                  <img src='images/2tunet.png' width="160">
+                  <img src='images/2t.png' width="160">
                 </div>
                   <script type="text/javascript">
                   function hnerf_start() {
