--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://waymo.com/research/block-nerf/">
+                <a href="https://arxiv.org/abs/2206.11095">
                   <span class="papertitle">A High Resolution Multi-exposure Stereoscopic Image & Video Database of Natural Scenes</span>
                 </a>
                 <br>
@@ -232,7 +232,7 @@ multi-exposure-stereo-data/.">Webpge</a>
           /
                 <a href="https://arxiv.org/abs/2206.11095">ArXiv</a>
                 <p></p>
-                <p>We can do city-scale reconstruction by training multiple NeRFs with millions of images.</p>
+                <p>A diversified stereoscopic multi-exposure dataset captured within the campus of IIT Madras, which is home to a diverse flora and fauna.</p>
               </td>
             </tr>
             
@@ -257,7 +257,7 @@ multi-exposure-stereo-data/.">Webpge</a>
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2206.11095">
+                <a href="https://arxiv.org/abs/2210.15374">
                   <span class="papertitle">2T-UNET: A Two-Tower UNet with Depth Clues for Robust Stereo Depth Estimation</span>
                 </a>
                 <br>
@@ -269,7 +269,7 @@ multi-exposure-stereo-data/.">Webpge</a>
                 <br>
                 <a href="https://arxiv.org/abs/2210.15374">ArXiv</a>
                 <p></p>
-                <p>A diversified stereoscopic multi-exposure dataset captured within the campus of IIT Madras, which is home to a diverse flora and fauna.</p>
+                <p>Combining NeRF with pose estimation lets you use a monocular video to do free-viewpoint rendering of a human.</p>
               </td>
             </tr>
 
