--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ multi-exposure-stereo-data/.">Webpge</a>
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
               <td>
-                <h2>Miscellanea</h2>
+                <h2>Projects</h2>
               </td>
             </tr>
           </tbody></table>
