--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
 
 
-      <tr onmouseout="zipnerf_stop()" onmouseover="zipnerf_start()"  bgcolor="#ffffd0">
+      <tr onmouseout="zipnerf_stop()" onmouseover="zipnerf_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='zipnerf_image'><img src='images/MEStereo2.png' width="160">
