--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://bakedsdf.github.io/">
+          <a href="https://ieeexplore.ieee.org/document/9675391/">
             <span class="papertitle">SDE-DualENet: A Novel Dual Efficient Convolutional Neural Network for Robust Stereo Depth Estimation</span>
           </a>
           <br>
@@ -185,7 +185,7 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <a href="https://ieeexplore.ieee.org/document/9675391/">Paper link</a>
           <p></p>
           <p>
-          We use SDFs to bake a NeRF-like model into a high quality mesh and do real-time view synthesis.
+          Eliminating cost-volume construction in stereo disparity estimation.
           </p>
         </td>
       </tr>
