--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ multi-exposure-stereo-data/.">Webpge</a>
           /
                 <a href="https://arxiv.org/abs/2206.11095">ArXiv</a>
                 <p></p>
-                <p>A diversified stereoscopic multi-exposure dataset captured within the campus of IIT Madras, which is home to a diverse flora and fauna.</p>
+                <p>A diversified stereoscopic multi-exposure dataset captured within the campus of IIT Madras.</p>
               </td>
             </tr>
             
