--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ multi-exposure-stereo-data/.">Webpge</a>
                 <br>
                 <a href="https://arxiv.org/abs/2210.15374">ArXiv</a>
                 <p></p>
-                <p>Robust stereo depth estimation.</p>
+                <p>Robust stereo depth estimation perform incredibly well on complex natural scenes.</p>
               </td>
             </tr>
 
