--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ estimates from multi-exposure stereo images for HDR 3D applications</span>
           <br>
           <em>IEEE International Conference on Image Processing (ICIP)</em>, 2023
           <br>
-          <a href="https://dreambooth3d.github.io/">Project page</a> / 
-          <a href="https://drive.google.com/file/d/1fWc2KEWm3KLigQnI3u-81xG-g51ObCze/view?usp=sharing??">Preprint</a>
+          <a href="https://ieeexplore.ieee.org/document/10223080">Paper link</a> / 
+          <a href="https://www.youtube.com/watch?v=5sSBskIqaKg">Presentation video</a>
           <p></p>
           <p>ELEGAN, a lightweight attention-guided generative adversarial network for fast low-light image enhancement in a fully unsupervised manner.
           </p>
