--- a/index.html
+++ b/index.html
@@ -259,8 +259,11 @@ multi-exposure-stereo-data/.">Webpge</a>
                 <br>
                 <strong>Rohit Choudhary</strong>,
                 <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
-                <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, <br>
+                <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, 
                 <br>
+                <p>Second Workshop for Learning 3D with Multi-View Supervision (3DMV), CVPR 2024. </p>
+                <br>
+                 <a href="https://openaccess.thecvf.com/content/CVPR2024W/3DMV/papers/Sharma_2T-UNET_A_Two-Tower_UNet_with_Depth_Clues_for_Robust_Stereo_CVPRW_2024_paper.pdf">Paper Link</a>
                 <em>arXiv</em>, 2022 &nbsp
                 <br>
                 <a href="https://arxiv.org/abs/2210.15374">ArXiv</a>
