--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@ multi-exposure-stereo-data/.">Webpge</a>
                   <span class="papertitle">2T-UNET: A Two-Tower UNet with Depth Clues for Robust Stereo Depth Estimation</span>
                 </a>
                 <br>
-                <strong>Rohit Choudhary</strong>,
-                <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma</a>,
+                <strong>Rohit Choudhary*</strong>,
+                <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma*</a>,
                 <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, 
                 <p>Second Workshop for Learning 3D with Multi-View Supervision (3DMV), CVPR 2024. </p>
                 <br>
