--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ multi-exposure-stereo-data/.">Webpge</a>
                 <strong>Rohit Choudhary*</strong>,
                 <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma*</a>,
                 <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, 
-                <p>Second Workshop for Learning 3D with Multi-View Supervision (3DMV), CVPR 2024. </p>
+                <br>Second Workshop for Learning 3D with Multi-View Supervision (3DMV), CVPR 2024.
                 <br>
                  <a href="https://openaccess.thecvf.com/content/CVPR2024W/3DMV/papers/Sharma_2T-UNET_A_Two-Tower_UNet_with_Depth_Clues_for_Robust_Stereo_CVPRW_2024_paper.pdf">Paper Link/</a>
                 <a href="https://arxiv.org/abs/2210.15374">ArXiv</a>
