--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>
                    <ul>
                     <li>(June 17, 2024) See you at Arch Building Exhibit Hall, Board 56 <font color ="red">(Poster Presentation)</font> at 3DMV, CVPR 2024.</li>
-                    <li>(October 9, 2023) I  be presenting ELEGAN <font color ="red">(Poster Presentation)</font> at ICIP 2023.</li>
+                    <li>(October 9, 2023) I will be presenting ELEGAN <font color ="red">(Poster Presentation)</font> at ICIP 2023.</li>
                     <li>(June 22, 2023) Paper on unsupervised low light image enhancement accepted in IEEE ICIP 2023.</li>
                     <li>(April 27, 2023) MEStereo-Du2CNN paper accepted for publication in The Visual Computer Journal.</li>
                     <li>(September, 2021) Paper on stereo depth estimation accepted in IEEE VCIP 2021.</li>
