--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
                   <span class="papertitle">GANESH: Generalizable NeRF for Lensless Imaging</span>
                 </a>
                 <br>
-                Rakesh Raj Madavan, Akshat Kaimal, Badhrinarayanan K V, Vinayak Gupta, <strong>Rohit Choudhary</strong>, Chandrakala Shanmuganathan, Kaushik Mitra
-                <a href="https://www.linkedin.com/in/mansi-sharma-89942623/?originalSubdomain=in">Mansi Sharma*</a>,
-                <a href="https://www.linkedin.com/in/rithvik-anil/?originalSubdomain=in">Rithvik Anil</a>, 
-                <br> <em>WACV</em> 2024.
+                Rakesh Raj Madavan, Akshat Kaimal, Badhrinarayanan K V, Vinayak Gupta, <strong>Rohit Choudhary</strong>, Chandrakala Shanmuganathan, Kaushik Mitra. 
+                <br> <em>IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</em> 2025.
                 <br>
-                 <a href="https://openaccess.thecvf.com/content/CVPR2024W/3DMV/papers/Sharma_2T-UNET_A_Two-Tower_UNet_with_Depth_Clues_for_Robust_Stereo_CVPRW_2024_paper.pdf">Paper Link/</a>
-                <a href="https://arxiv.org/abs/2210.15374">ArXiv</a>
+                 <a href="hhttps://arxiv.org/pdf/2411.04810">Arxiv Link/</a>
+                <a href="https://rakesh-123-cryp.github.io/Rakesh.github.io/static/index.html">Project page</a>
                 <p></p>
                 <p>Robust stereo depth estimation perform incredibly well on complex natural scenes.</p>
               </td>
