--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                  <a href="hhttps://arxiv.org/pdf/2411.04810">Arxiv Link/</a>
                 <a href="https://rakesh-123-cryp.github.io/Rakesh.github.io/static/index.html">Project page</a>
                 <p></p>
-                <p>Robust stereo depth estimation perform incredibly well on complex natural scenes.</p>
+                <p>Framework for simultaneous 3D refinement and novel view synthesis from multi-view lensless images, supporting on-the-fly inference and scene-specific tuning.</p>
               </td>
             </tr>
 
