--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
                   <div class="two" id='blocknerf_image'><video  width=100% height=100% muted autoplay loop>
-                  <source src="images/2tunet.mp4" type="video/mp4">
+                  <source src="images/GANESH.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video></div>
                   <img src='images/2t.png' width="160">
