--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2210.15374">
+                <a href="https://arxiv.org/pdf/2411.04810">
                   <span class="papertitle">GANESH: Generalizable NeRF for Lensless Imaging</span>
                 </a>
                 <br>
                 Rakesh Raj Madavan, Akshat Kaimal, Badhrinarayanan K V, Vinayak Gupta, <strong>Rohit Choudhary</strong>, Chandrakala Shanmuganathan, Kaushik Mitra. 
                 <br> <em>IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</em> 2025.
                 <br>
-                 <a href="hhttps://arxiv.org/pdf/2411.04810">Arxiv Link/</a>
+                 <a href="https://arxiv.org/pdf/2411.04810">Arxiv Link/</a>
                 <a href="https://rakesh-123-cryp.github.io/Rakesh.github.io/static/index.html">Project page</a>
                 <p></p>
                 <p>Framework for simultaneous 3D refinement and novel view synthesis from multi-view lensless images, supporting on-the-fly inference and scene-specific tuning.</p>
