--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                   <source src="images/GANESH.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video></div>
+                  <img src='images/Ganesh.png' width="160">
                 </div>
                   <script type="text/javascript">
                   function hnerf_start() {
@@ -98,7 +99,7 @@
                 Rakesh Raj Madavan, Akshat Kaimal, Badhrinarayanan K V, Vinayak Gupta, <strong>Rohit Choudhary</strong>, Chandrakala Shanmuganathan, Kaushik Mitra. 
                 <br> <em>IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</em> 2025.
                 <br>
-                 <a href="https://arxiv.org/pdf/2411.04810">Arxiv Link/</a>
+                 <a href="https://arxiv.org/pdf/2411.04810">Arxiv/</a>
                 <a href="https://rakesh-123-cryp.github.io/Rakesh.github.io/static/index.html">Project page</a>
                 <p></p>
                 <p>Framework for simultaneous 3D refinement and novel view synthesis from multi-view lensless images, supporting on-the-fly inference and scene-specific tuning.</p>
